changes to how spellbooks display in JEI